--- a/css/style.css
+++ b/css/style.css
@@ -678,11 +678,74 @@ body {
 }
 
 /* line 95, ../sass/components/_components.scss */
+.violet-section {
+  background-color: #6e3cb7;
+}
+/* line 100, ../sass/components/_components.scss */
+.violet-section__header {
+  color: #ffffff;
+}
+/* line 103, ../sass/components/_components.scss */
+.violet-section__header .section-intro {
+  margin: 80px 0px 30px 0;
+  font-family: "HindiRegular";
+  font-size: 16px;
+  line-height: 1.8;
+}
+/* line 110, ../sass/components/_components.scss */
+.violet-section__header .section-intro strong {
+  font-family: "HindiBold";
+}
+/* line 112, ../sass/components/_components.scss */
+.violet-section__header .section-intro:before, .violet-section__header .section-intro:after {
+  content: '';
+  width: 126px;
+  height: 2px;
+  display: inline-block;
+  vertical-align: middle;
+  background: #f0f0f0;
+}
+/* line 121, ../sass/components/_components.scss */
+.violet-section__header .section-intro:before {
+  margin-right: 7px;
+}
+/* line 124, ../sass/components/_components.scss */
+.violet-section__header .section-intro:after {
+  margin-left: 7px;
+}
+/* line 130, ../sass/components/_components.scss */
+.violet-section__header .section-intro--no-decoration:before, .violet-section__header .section-intro--no-decoration:after {
+  content: none;
+}
+/* line 136, ../sass/components/_components.scss */
+.violet-section__header .gradientTitle {
+  color: #ffffff;
+  margin-bottom: 7px;
+  font-family: "HindiLight";
+  font-size: 52px;
+  line-height: 1.3;
+}
+@media only screen and (max-width: 767px) {
+  /* line 136, ../sass/components/_components.scss */
+  .violet-section__header .gradientTitle {
+    font-size: 52px;
+    line-height: 1.3;
+  }
+}
+@media only screen and (max-width: 639px) {
+  /* line 136, ../sass/components/_components.scss */
+  .violet-section__header .gradientTitle {
+    font-size: 25px;
+    line-height: 1.2;
+  }
+}
+
+/* line 154, ../sass/components/_components.scss */
 .center-section {
   margin-bottom: 130px;
   text-align: center;
 }
-/* line 101, ../sass/components/_components.scss */
+/* line 160, ../sass/components/_components.scss */
 .center-section__main-content .main-intro {
   font-family: "HindiRegular";
   font-size: 20px;
@@ -690,7 +753,7 @@ body {
   line-height: 1.3;
   color: #2f2f2f;
 }
-/* line 108, ../sass/components/_components.scss */
+/* line 167, ../sass/components/_components.scss */
 .center-section__main-content .inline-items {
   margin: 50px auto 70px auto;
   content: '';
@@ -698,12 +761,12 @@ body {
   clear: both;
 }
 @media only screen and (max-width: 767px) {
-  /* line 108, ../sass/components/_components.scss */
+  /* line 167, ../sass/components/_components.scss */
   .center-section__main-content .inline-items {
     padding-left: 0px;
   }
 }
-/* line 117, ../sass/components/_components.scss */
+/* line 176, ../sass/components/_components.scss */
 .center-section__main-content .inline-items li {
   width: 321px;
   display: block;
@@ -711,47 +774,47 @@ body {
   list-style-type: none;
 }
 @media only screen and (max-width: 1023px) {
-  /* line 117, ../sass/components/_components.scss */
+  /* line 176, ../sass/components/_components.scss */
   .center-section__main-content .inline-items li {
     width: 235px;
   }
 }
 @media only screen and (max-width: 767px) {
-  /* line 117, ../sass/components/_components.scss */
+  /* line 176, ../sass/components/_components.scss */
   .center-section__main-content .inline-items li {
     width: 200px;
   }
 }
 @media only screen and (max-width: 639px) {
-  /* line 117, ../sass/components/_components.scss */
+  /* line 176, ../sass/components/_components.scss */
   .center-section__main-content .inline-items li {
     width: 100%;
   }
 }
-/* line 135, ../sass/components/_components.scss */
+/* line 194, ../sass/components/_components.scss */
 .center-section__main-content .inline-items li:not(:first-child) {
   margin-left: 20px;
 }
 @media only screen and (max-width: 767px) {
-  /* line 135, ../sass/components/_components.scss */
+  /* line 194, ../sass/components/_components.scss */
   .center-section__main-content .inline-items li:not(:first-child) {
     margin-left: 5px;
   }
 }
 @media only screen and (max-width: 639px) {
-  /* line 135, ../sass/components/_components.scss */
+  /* line 194, ../sass/components/_components.scss */
   .center-section__main-content .inline-items li:not(:first-child) {
     margin-left: 0px;
   }
 }
 
-/* line 152, ../sass/components/_components.scss */
+/* line 211, ../sass/components/_components.scss */
 .quote {
   color: #0070b8;
   font-family: "HindiSemiBold";
 }
 
-/* line 158, ../sass/components/_components.scss */
+/* line 217, ../sass/components/_components.scss */
 .round-button {
   padding: 10px 25px;
   font-size: 16px;
@@ -763,7 +826,7 @@ body {
   border-radius: 25px;
 }
 
-/* line 167, ../sass/components/_components.scss */
+/* line 226, ../sass/components/_components.scss */
 .btn {
   padding: 10px 20px;
   color: #ffffff;
@@ -773,7 +836,7 @@ body {
   line-height: 1.8;
 }
 @media only screen and (max-width: 1023px) {
-  /* line 167, ../sass/components/_components.scss */
+  /* line 226, ../sass/components/_components.scss */
   .btn {
     width: 100%;
     text-align: center;
@@ -781,7 +844,7 @@ body {
     line-height: 1.8;
   }
 }
-/* line 183, ../sass/components/_components.scss */
+/* line 242, ../sass/components/_components.scss */
 .btn--simple {
   border: 1px solid #076fe4;
   border-radius: 3px;
@@ -816,7 +879,7 @@ body {
   cursor: not-allowed;
   opacity: 0.5;
 }
-/* line 186, ../sass/components/_components.scss */
+/* line 245, ../sass/components/_components.scss */
 .btn--pill {
   border: 1px solid #3371b2;
   border-color: #3371b2 #2457a3 #164297;
@@ -861,13 +924,19 @@ body {
   cursor: not-allowed;
   opacity: 0.5;
 }
-/* line 192, ../sass/components/_components.scss */
+/* line 251, ../sass/components/_components.scss */
 .btn--blue {
   color: #ffffff;
   background: #0070b8;
 }
+/* line 255, ../sass/components/_components.scss */
+.btn--teal {
+  color: #ffffff;
+  border: 1px solid #247175;
+  background: #50c2c9;
+}
 
-/* line 199, ../sass/components/_components.scss */
+/* line 263, ../sass/components/_components.scss */
 .main-generic-link {
   color: #0070b8;
   font-family: "HindiSemiBold";
@@ -876,7 +945,7 @@ body {
   line-height: 1.8;
 }
 
-/* line 208, ../sass/components/_components.scss */
+/* line 272, ../sass/components/_components.scss */
 .icon {
   display: inline-block;
   width: 1em;
@@ -884,7 +953,7 @@ body {
   fill: currentColor;
 }
 
-/* line 224, ../sass/components/_components.scss */
+/* line 288, ../sass/components/_components.scss */
 .left-section {
   text-align: left;
 }
@@ -1853,59 +1922,120 @@ footer .footer-container {
 }
 
 /* line 336, ../sass/pages/homepage/_homepage.scss */
+.sign-up {
+  background: url("../images/homepage/sign-up-bkg.jpg") center;
+}
+/* line 339, ../sass/pages/homepage/_homepage.scss */
+.sign-up .section-header {
+  padding-top: 80px;
+  margin-bottom: 30px;
+}
+/* line 343, ../sass/pages/homepage/_homepage.scss */
+.sign-up .section-header .icon-tips {
+  font-size: 80px;
+  line-height: 1;
+}
+/* line 348, ../sass/pages/homepage/_homepage.scss */
+.sign-up__main-content {
+  width: 560px;
+  margin: 0 auto;
+  padding-bottom: 100px;
+}
+/* line 353, ../sass/pages/homepage/_homepage.scss */
+.sign-up__main-content .main-intro {
+  color: #ffffff;
+  margin-bottom: 40px;
+}
+/* line 358, ../sass/pages/homepage/_homepage.scss */
+.sign-up__main-content .sign-up__form {
+  margin-bottom: 15px;
+}
+/* line 361, ../sass/pages/homepage/_homepage.scss */
+.sign-up__main-content .sign-up__form input {
+  width: 100%;
+  margin: 0 auto 20px auto;
+  padding: 8px 20px;
+  display: block;
+  font-family: "HindiRegular";
+  text-align: left;
+  border-style: hidden;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  font-size: 20px;
+  line-height: 2;
+}
+/* line 374, ../sass/pages/homepage/_homepage.scss */
+.sign-up__main-content .sign-up__form .btn {
+  color: #ffffff;
+  width: initial;
+  padding: 15px 45px;
+  font-family: "HindiSemiBold";
+  font-size: 22px;
+  line-height: 1;
+}
+/* line 384, ../sass/pages/homepage/_homepage.scss */
+.sign-up__main-content .promise {
+  color: #b7b7b7;
+  font-family: "HindiRegular";
+  font-size: 15px;
+  line-height: 1;
+}
+
+/* line 395, ../sass/pages/homepage/_homepage.scss */
 .testimonials {
   text-align: center;
   margin-bottom: 130px;
   background: url("../images/homepage/abstract-connected.png") no-repeat center;
 }
-/* line 342, ../sass/pages/homepage/_homepage.scss */
+/* line 401, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .video {
   margin-bottom: 50px;
 }
-/* line 350, ../sass/pages/homepage/_homepage.scss */
+/* line 409, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider {
   max-width: 730px;
   margin: 0 auto;
 }
 @media only screen and (max-width: 767px) {
-  /* line 350, ../sass/pages/homepage/_homepage.scss */
+  /* line 409, ../sass/pages/homepage/_homepage.scss */
   .testimonials__main-content .testimonials-slider {
     max-width: 320px;
   }
 }
 @media only screen and (max-width: 639px) {
-  /* line 350, ../sass/pages/homepage/_homepage.scss */
+  /* line 409, ../sass/pages/homepage/_homepage.scss */
   .testimonials__main-content .testimonials-slider {
     max-width: 300px;
   }
 }
-/* line 362, ../sass/pages/homepage/_homepage.scss */
+/* line 421, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items {
   margin: 0 10px;
   text-align: center;
 }
-/* line 367, ../sass/pages/homepage/_homepage.scss */
+/* line 426, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items img, .testimonials__main-content .testimonials-slider .ts-items span, .testimonials__main-content .testimonials-slider .ts-items .icon {
   display: block;
 }
-/* line 370, ../sass/pages/homepage/_homepage.scss */
+/* line 429, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items > img {
   margin-bottom: 30px;
   width: 116px;
   height: 112px;
   display: inline-table;
 }
-/* line 377, ../sass/pages/homepage/_homepage.scss */
+/* line 436, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .name, .testimonials__main-content .testimonials-slider .ts-items .title {
   font-family: "HindiBold";
   color: #2f2f2f;
 }
-/* line 382, ../sass/pages/homepage/_homepage.scss */
+/* line 441, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .name {
   font-size: 20px;
   line-height: 1.3;
 }
-/* line 386, ../sass/pages/homepage/_homepage.scss */
+/* line 445, ../sass/pages/homepage/_homepage.scss */
 .testimonials__main-content .testimonials-slider .ts-items .title {
   font-size: 15px;
   line-height: 1.8;
