--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -92,6 +92,65 @@ body{
 	}
 }
 
+.violet-section{
+	// Default Violet; Note :: Color can be change in other specific scss file that loads after components.scss.
+	background-color: $violet;
+
+	// Header
+	&__header{
+		color: $white;
+
+		.section-intro{
+		   margin: 80px 0px 30px 0;
+			font-family: $hi-r;
+			
+
+			@include font-size(16px);
+
+			strong{font-family: $hi-b;}
+			
+			&:before, &:after{
+				content: '';
+				width: 126px;
+				height: 2px;
+				display: inline-block;
+				vertical-align: middle;
+				background: $off-white;
+			}
+
+			&:before{
+				margin-right: 7px;				
+			}
+			&:after{
+				margin-left: 7px;
+			}
+
+			// No lines on the sides
+			&--no-decoration{
+				&:before, &:after{
+					content: none;
+				}
+			}
+		}
+
+		.gradientTitle{
+			color: $white;
+			margin-bottom: 7px;
+			font-family: $hi-l;
+
+			@include font-size(52px, 1.3);
+
+			@include screen(mobile-l-max){
+				@include font-size(52px, 1.3);
+			}
+
+			@include screen(mobile-max){
+				@include font-size(25px, 1.2);
+			}
+		}
+	}
+}
+
 .center-section{
 	margin-bottom: 130px;
 	text-align: center;
@@ -192,6 +251,11 @@ body{
     &--blue{
         color: #ffffff;
         background: $main-blue;
+    }
+    &--teal{
+    	color: $white;
+ 	   border: 1px solid darken($teal, 25%);
+    	background: $teal;
     }
 }
 
