--- a/sass/pages/homepage/_homepage.scss
+++ b/sass/pages/homepage/_homepage.scss
@@ -332,6 +332,65 @@
 	}
 }
 
+// Sign Up - 5
+.sign-up{
+	background: url('../images/homepage/sign-up-bkg.jpg') center;
+
+	.section-header{
+	   padding-top: 80px;
+	   margin-bottom: 30px;
+
+		.icon-tips{
+			@include font-size(80px, 1);
+		}
+	}
+
+	&__main-content{
+		width: 560px;
+		margin: 0 auto;
+		padding-bottom: 100px;
+
+		.main-intro{
+			color: $white;
+			margin-bottom: 40px;
+		}
+
+		.sign-up__form{
+			margin-bottom: 15px;
+
+			input{
+				width: 100%;
+				margin: 0 auto 20px auto;
+				padding: 8px 20px;
+				display: block;
+				font-family: $hi-r;
+				text-align: left;
+			   border-style: hidden;
+
+				@include border-radius(8px);
+				@include font-size(20px, 2);
+			}
+
+			.btn{
+				color: $white;
+				width: initial;
+				padding: 15px 45px;
+				font-family: $hi-sb;
+
+				@include font-size(22px, 1);
+			}
+		}
+
+		.promise{
+			color: #b7b7b7;
+			font-family: $hi-r;
+
+			@include font-size(15px, 1);
+		}
+	}
+}
+
+
 // Testimonials - 6
 .testimonials{
 	text-align: center;
